fix alignment of items next to the search bar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,17 +20,18 @@
   opacity: 0.7;
   margin-bottom: 12px;
 }
+
  .youtube {
   width: 50%;
   height: auto;
 }
 
 .searchbar {
-  width: 70%;
+  width: 60%;
 }
 
 .search input {
-  width: 80%;
+  width: 89%;
   line-height: 1.5em;
   border-radius: 0;
   border: 1px solid #ccc;
@@ -38,13 +39,16 @@
 }
 
 .search button {
-  width: 10%;
+  width:10%;
   border-radius: 0;
   padding: 7px;
+  float: right;
 }
 
 .signin img {
-  width: 25%;
+  width: 15%;
+  float: left;
+  margin-left:50px;
 }
 
 .search button img {
@@ -52,7 +56,7 @@
 }
 
 .signin {
-  width: 10%;
+  width: 20%;
 }
 
 .signin button {
@@ -61,6 +65,8 @@
   padding: 10px;
   border: 0;
   color: #fff;
+  float:right;
+  margin-right: 50px;
 }
 
 .videos {
@@ -136,7 +142,6 @@ div.icons .right button img {
 
 div.icons .right {
   width: 20%;
-  align-items: right;
 }
 
 .main-video video {
